# Aigoogleads

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260713_2240_a121976a3d14_initial_schema.py  20260713_2254_fe54537fafc9_add_refresh_tokens.py  20260713_2314_0c06a5f65c76_add_google_ads_tables.py  20260713_2333_c60c62970372_add_agent_tables.py  20260713_2347_c5eb86af5a74_add_campaign_creation_tables.py  20260714_1209_dab4b6fec409_add_optimization_and_metrics_tables.py  20260714_1359_6782ebff3259_add_ai_insights_and_memory_importance.py  20260714_1417_f71797b61bc4_add_api_keys.py  20260714_1433_ab0d1a9c5b68_add_usage_records.py  20260715_1622_782db7a1760f_add_org_stripe_fields.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  campaign_creation.py  context.py  execution.py  specialists.py  supervisor.py  tools.py
backend/app/agents/llm/: __init__.py  base.py  openai_provider.py  provider.py
backend/app/api/: deps.py  quota.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  analytics.py  api_keys.py  auth.py  billing.py  campaigns.py  google_ads.py  health.py  industry.py  notifications.py  optimization.py  organizations.py  reports.py  users.py
backend/app/core/: config.py  context.py  db.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py
backend/app/integrations/: __init__.py  google_oauth.py  website.py
backend/app/integrations/google_ads/: __init__.py  client.py  mappers.py  oauth.py  queries.py
backend/app/models/: __init__.py  agent.py  api_key.py  audit_log.py  base.py  campaign.py  enums.py  google_ads.py  metrics.py  notification.py  optimization.py  organization.py  refresh_token.py  usage.py  user.py
backend/app/repositories/: __init__.py  agent.py  api_key.py  audit.py  base.py  campaign.py  google_ads.py  metrics.py  notification.py  optimization.py  organization.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  agents.py  analytics.py  api_key.py  auth.py  billing.py  campaign.py  common.py  google_ads.py  industry.py  notification.py  optimization.py  organization.py  reports.py  user.py
backend/app/services/: __init__.py  ai.py  ai_insights.py  analytics.py  api_key.py  audit.py  auth.py  campaign_assembler.py  campaign_creation.py  email.py  google_ads.py  industry_templates.py  metrics.py  notification.py  optimization_engine.py  organization.py  reports.py  safety.py  stripe_billing.py  usage.py  user.py
backend/app/worker/: __init__.py  celery_app.py  jobs.py  runtime.py  tasks.py
backend/scripts/: verify_google_ads.py
backend/tests/: conftest.py  test_ai_agents.py  test_ai_insights.py  test_analytics.py  test_api_keys.py  test_auth.py  test_billing.py  test_campaign_creation.py  test_google_ads.py  test_health.py  test_industry.py  test_optimization.py  test_password_reset.py  test_reports.py  test_security.py  test_stripe.py
deploy/k8s/: README.md  backend.yaml  config.yaml  data.yaml  frontend.yaml  ingress.yaml  namespace.yaml  worker.yaml
docs/: ARCHITECTURE.md  CAMPAIGN_CREATION.md  DEPLOYMENT.md  GOOGLE_ADS.md  OPTIMIZATION.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  (+1 more)
nginx/: nginx.conf
nginx/conf.d/: default.conf
(+51 files in other folders)
